monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/Expressions.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar Expressions  {

  interface Expr;

  PlusExpr implements Expr = Expr "+" Expr;

  B = Expr;

  PlusExpr2 = PlusExpr2 "+" PlusExpr2;

}
